--- a/DiningManagementApp/templates/communication/student_messages.html
+++ b/DiningManagementApp/templates/communication/student_messages.html
@@ -1,8 +1,14 @@
 {% extends 'core/base/base.html' %}
-{% block title %}Provost Notices{% endblock %}
+{% block title %}Student's Messages{% endblock %}
 {% block body %}
+{% load auth_extras %}
 <div class="container">
-    <h1 class="mt-4">Hall Provost Notices</h1>
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mt-4">Student's Messages</h1>
+        {% if request.user|has_group:"Hall Provost" or request.user|has_group:"Developer"%}
+        <a href="{% url 'student_notice' %}" style="border: 1px solid green; border-radius: 5px; display: flex; align-items: center; background-color: aqua; text-decoration: none; color: black; padding: 5px; margin-right:20px; margin-top: 20px; height: 50px;"><i class="bi bi-link-45deg"></i>Create New Message</a>
+        {% endif %}
+    </div>
     <div class="row mt-4">
         {% for notice in notices %}
         <div class="col-md-6">
@@ -12,7 +18,7 @@
                     <p class="card-text">{{ notice.description|linebreaksbr }}</p>
                     <p class="card-text"><small class="text-muted">Posted on: {{ notice.date }}</small></p>
                     <!-- Add a delete button/link -->
-                    <form action="{% url 'delete_notice' notice.id %}" method="post">
+                    <form action="{% url 'delete_student_notice' notice.id %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
